webpack html config

--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,5 @@
     <title>Snake</title>
   </head>
   <body></body>
-  <script src="build/main.js"></script>
+  <script src="main.js"></script>
 </html>
